fix: Fix signup align

--- a/client/src/scenes/Signup/styles.module.scss
+++ b/client/src/scenes/Signup/styles.module.scss
@@ -1,6 +1,8 @@
 :global(.ui.grid.signup-grid) {
   height: 100%;
   margin: 0;
+  display: flex;
+  align-items: center;
   :global(.ui.center.aligned.header) {
     margin-top: 1em;
   }
